<resources>
    <string name="app_name">Mediplus</string>
    <string name="text_logo_app_con_nombre">Logo app con nombre</string>
    <string name="text_logo_de_la_app">Logo de la app</string>
    <string name="text_introduce_tu_correo">Introduce tu correo</string>
    <string name="text_introduce_tu_contrasena">Introduce tu contraseña</string>
    <string name="text_iniciar_sesion">Iniciar Sesión</string>
    <string name="hint_introduce_tu_nombre">Introduce tu nombre</string>
    <string name="hint_introduce_tu_apellido">Introduce tu apellido</string>
    <string name="hint_introduce_tu_telefono">Introduce tu telefono</string>
    <string name="hint_introduce_tu_contrasena">Introduce tu contraseña</string>
    <string name="text_crear_cuenta">Crear cuenta</string>
    <string name="text_inicio_de_sesion">Inicio de sesión</string>
    <string name="label_correo">Correo</string>
    <string name="label_contrasena">Contraseña</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="text_crear_recordatorio_de_medicamento">Crear recordatorio de medicamento</string>
    <string name="text_gestiona_tus_recordatorios_m_s_importantes">Gestiona tus recordatorios más importantes.</string>
    <string name="text_gestiona_tus_anotaciones">Gestiona tus anotaciones.</string>
    <string name="text_crear_recordatorio_de_hidratación">Crear recordatorio de hidratación</string>
    <string name="text_crear_recordatorio_de_citas_medicas">Crear recordatorio de citas medicas</string>
    <string name="text_revisar_mis_anotaciones">Revisar mis anotaciones</string>
    <string name="text_gestiona_tus_examenes">Gestiona tus examenes.</string>
    <string name="text_historial_de_examenes">Historial de examenes</string>
    <string name="hint_introduce_tu_correo">Introduce tu correo</string>
    <string name="text_registrate">Registrate</string>
    <string name="text_no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="text_boton_volver">Boton volver</string>
    <string name="text_label_nombres">Nombres</string>
    <string name="text_label_apellidos">Apellidos</string>
    <string name="text_label_telefono">Telefono</string>
    <string name="text_label_correo">Correo</string>
    <string name="text_label_contrasena">Contraseña</string>
    <string name="text_ya_tienes_cuenta">¿Ya tienes cuenta?</string>
    <string name="text_inicia_sesion">Inicia sesión</string>
    <string name="text_imagen_de_logo">Imagen de logo</string>
    <string name="text_seleccione_la_presentacion">Seleccione la presentación...</string>
    <string name="text_seleccione">Seleccione..</string>
    <string name="text_nombre_del_medicamento">Nombre del medicamento</string>
    <string name="text_presentacion_del_medicamento">Presentación del medicamento</string>
    <string name="text_label_fecha_desde">Fecha desde</string>
    <string name="text_label_fecha_hasta">Fecha hasta</string>
    <string name="text_dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="text_label_dosis">Dosis</string>
    <string name="text_label_unidad">Unidad</string>
    <string name="text_hint_numerico">1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_navigation_drawer">navigation_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>