<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEFEFE"
    tools:context=".Registrarse">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp">

                <ImageButton
                    android:id="@+id/activity_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:contentDescription="@string/text_boton_volver"
                    android:padding="8dp"
                    app:srcCompat="@drawable/icono_regresar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Registro de usuarios"
                    android:textStyle="bold"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp">

                <TextView
                    android:id="@+id/textView09"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ingresa los siguientes datos"
                    android:textSize="14sp" />
            </LinearLayout>

            <!-- Campo Nombres -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_label_nombres"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <EditText
                    android:id="@+id/txtNombres"
                    style="@style/Style_input"
                    android:ems="10"
                    android:hint="@string/hint_introduce_tu_nombre"
                    android:inputType="text" />
            </LinearLayout>

            <!-- Campo Apellidos -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/textView60"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_label_apellidos"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <EditText
                    android:id="@+id/txtApellidos"
                    style="@style/Style_input"
                    android:hint="@string/hint_introduce_tu_apellido"
                    android:ems="10"
                    android:inputType="text" />
            </LinearLayout>

            <!-- Campo Teléfono -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/textView58"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_label_telefono"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <EditText
                    android:id="@+id/txtTelefono"
                    style="@style/Style_input"
                    android:hint="@string/hint_introduce_tu_telefono"
                    android:ems="10"
                    android:inputType="phone" />
            </LinearLayout>

            <!-- Campo Correo -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_label_correo"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <EditText
                    android:id="@+id/txtCorreo"
                    style="@style/Style_input"
                    android:hint="@string/hint_introduce_tu_correo"
                    android:ems="10"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <!-- Campo Contraseña -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/textView57"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_label_contrasena"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <EditText
                    android:id="@+id/txtPassword"
                    style="@style/Style_input"
                    android:hint="@string/hint_introduce_tu_contrasena"
                    android:ems="10"
                    android:inputType="textPassword" />
            </LinearLayout>

            <!-- Botón de Crear Cuenta -->
            <LinearLayout
                android:id="@+id/buttonCrearCuenta"
                style="@style/Style_button_sin_icono"
                android:layout_marginStart="30dp"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:drawablePadding="0dp"
                    android:gravity="center"
                    android:text="@string/text_crear_cuenta"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Texto de Inicio de Sesión -->
            <LinearLayout
                android:id="@+id/ButtonIniciarSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="48dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/text_ya_tienes_cuenta"/>
                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_inicia_sesion"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
