<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEFEFE"
    tools:context=".Editar_perfil">

    <!-- First layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_layout"
        style="@style/Style_bar_superior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <LinearLayout
                android:id="@+id/buttom_regresar_perfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:src="@drawable/icono_volver"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">
                    <Button
                        android:id="@+id/notification_button"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/button"
                        android:gravity="center"
                        android:padding="0dp"
                        android:text="MG"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- Second layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/top_layout">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth="350dp"
            tools:ignore="MissingConstraints">

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="#CAC4D0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- ScrollView for scrollable content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Second layout -->
            <!--<androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth="350dp"
                tools:ignore="MissingConstraints">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:background="#CAC4D0" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>-->

            <!-- Other content in the scrollable area -->
            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Editar perfil"
                        android:textStyle="bold"
                        android:textSize="24sp" />

                </LinearLayout>
                <!-- -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_label_nombres"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:layout_editor_absoluteY="262dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/editTxtNombres"
                        style="@style/Style_input"
                        android:ems="10"
                        android:hint="@string/hint_introduce_tu_nombre"
                        android:inputType="text"
                        tools:layout_editor_absoluteY="297dp" />
                </LinearLayout>
                <!-- -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:id="@+id/textView60"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_label_apellidos"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:layout_editor_absoluteY="262dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/editTxtApellidos"
                        style="@style/Style_input"
                        android:hint="@string/hint_introduce_tu_apellido"
                        android:ems="10"
                        android:inputType="text"
                        tools:layout_editor_absoluteY="297dp" />
                </LinearLayout>
                <!-- -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:id="@+id/textView58"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_label_telefono"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:layout_editor_absoluteY="262dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/editTxtTelefono"
                        style="@style/Style_input"
                        android:hint="@string/hint_introduce_tu_telefono"
                        android:ems="10"
                        android:inputType="phone"
                        tools:layout_editor_absoluteY="297dp" />
                </LinearLayout>
                <!-- -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_label_correo"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:layout_editor_absoluteY="262dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/editTxtCorreo"
                        style="@style/Style_input"
                        android:hint="@string/hint_introduce_tu_correo"
                        android:ems="10"
                        android:enabled="false"
                        android:focusable="false"
                        android:inputType="textEmailAddress"
                        tools:layout_editor_absoluteY="297dp" />
                </LinearLayout>
                <!-- -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:id="@+id/textView57"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_label_contrasena"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:layout_editor_absoluteY="262dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/editTxtPassword"
                        style="@style/Style_input"
                        android:hint="@string/hint_introduce_tu_contrasena"
                        android:ems="10"
                        android:inputType="textPassword"
                        tools:layout_editor_absoluteY="297dp" />
                </LinearLayout>
                <!-- -->

                <LinearLayout
                    android:id="@+id/guardarPerfil"
                    style="@style/Style_button_con_icono"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="32dp">

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="80dp"
                        android:layout_marginEnd="80dp"
                        android:layout_marginBottom="5dp"
                        android:drawablePadding="0dp"
                        android:gravity="center_horizontal"
                        android:text="Guardar datos"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        app:drawableStartCompat="@drawable/icono_guardar" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>